# infotainment_system

./: ReadMe.md
docker/: DockerfileToolChain  conanfile.txt
media_service/: CMakeLists.txt  Dockerfile  conanfile.txt
media_service/include/: media_service_interface.h  playback_status.h  song.h
media_service/src/: main.cpp  media_service.cpp  media_service.h
media_service/test/: media_service_it.cpp
proto/: media.proto
qt_information_ui/: CMakeLists.txt  Dockerfile  conanfile.txt
qt_information_ui/include/: media_client_interface.h  playback_status.h  song.h
qt_information_ui/src/: car.ui  main.cpp  mainwindow.cpp  mainwindow.h  media_client.cpp  media_client.h
qt_information_ui/test/: mainwindow_it.cpp  mock_media_client.h
